# Qt

./: CMakeLists.txt  CMakeLists.txt.user.0210132  WeatherFetcher.js  advanced_data_processor.cpp  advanced_data_processor.h  data_dialog.cpp  data_dialog.h  data_processor.cpp  data_processor.h  editbookdialog.cpp  editbookdialog.h  editbookdialog.ui  graphiccontroller.cpp  graphiccontroller.h  graphicmodel.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.js  shape.cpp  shape.h  spiralprogressindicator.cpp  spiralprogressindicator.h
Qt-git2004-Qt-lr5_without_additional/: CMakeLists.txt  addshapcommand.cpp  addshapcommand.h  graphiccontroller.cpp  graphiccontroller.h  graphicmodel.cpp  mainwindow.cpp  mainwindow.h  removeshapcommand.cpp  removeshapcommand.h  shape.cpp  shape.h
